add  hub-mirror.c.163.com

--- a/freeswitch/bullseye/Dockerfile
+++ b/freeswitch/bullseye/Dockerfile
@@ -1,5 +1,5 @@
 #
-FROM docker.mirrors.ustc.edu.cn/docker.io/library/debian:bullseye
+FROM hub-mirror.c.163.com/library/debian:bullseye
 MAINTAINER Andrey Volk <andrey@signalwire.com>
 
 # explicitly set user/group IDs
