--- a/freeswitch/bullseye/Dockerfile
+++ b/freeswitch/bullseye/Dockerfile
@@ -85,8 +85,7 @@ RUN cd /usr/src/freeswitch && ./bootstrap.sh -j \
     && make hd-sounds-install \
     && make hd-moh-install \
     && make sounds-install \
-    && make moh-install \
-    && cp -r conf/vanilla /usr/local/freeswitch/conf/
+    && make moh-install
 
 # unimrcp-deps
 RUN cd /usr/src \
