--- a/freeswitch/bullseye/Dockerfile
+++ b/freeswitch/bullseye/Dockerfile
@@ -74,7 +74,7 @@ RUN cd /usr/src/freeswitch && ./bootstrap.sh -j \
     && sed -i "s/^applications\/mod_signalwire/#&/g" modules.conf \
     && sed -i "/^#event_handlers\/mod_odbc_cdr$/s/^#//" modules.conf \
     && sed -i "/^#endpoints\/mod_portaudio$/s/^#//" modules.conf \
-    && sed -i "/^#asr_tts/mod_flite$/s/^#//" modules.conf \
+    && sed -i "/^#asr_tts\/mod_flite$/s/^#//" modules.conf \
     && ./configure --bindir=/usr/bin --enable-core-odbc-support \
     && make -j`nproc` && make install \
     && make mod_portaudio \
