--- a/freeswitch/bullseye-xunfei/Dockerfile
+++ b/freeswitch/bullseye-xunfei/Dockerfile
@@ -121,7 +121,7 @@ RUN echo "export PKG_CONFIG_PATH=\$PKG_CONFIG_PATH:/usr/local/freeswitch/lib/pkg
 RUN cd /usr/src \
    # && git clone https://github.com/freeswitch/mod_unimrcp.git \
     && git clone -b unimrcp-1.6.1 https://github.com/peter158/unimrcp-1.6.git \
-    && cd mod_unimrcp \
+    && cd unimrcp-1.6 \
     && export PKG_CONFIG_PATH=/usr/local/freeswitch/lib/pkgconfig:/usr/local/unimrcp/lib/pkgconfig \
     && ./bootstrap.sh && ./configure && make && make install
 
