--- a/freeswitch/centos/Dockerfile
+++ b/freeswitch/centos/Dockerfile
@@ -1,5 +1,6 @@
 #
-FROM hub-mirror.c.163.com/library/centos:7
+#FROM hub-mirror.c.163.com/library/centos:7
+FROM 05f073ad3c0010ea0f4bc00b7105ec20.mirror.swr.myhuaweicloud.com/library/centos:7
 MAINTAINER Andrey Volk <andrey@signalwire.com>
 
 ARG FREESWITCH_VERSION=1.10.9
