--- a/freeswitch/centos/Dockerfile
+++ b/freeswitch/centos/Dockerfile
@@ -70,16 +70,16 @@ RUN #gpg2 --keyserver hkp://keyserver.ubuntu.com --recv-keys B42F6819007F00F88E3
     #&& rm /usr/local/bin/gosu.asc \
     && chmod +x /usr/local/bin/gosu
 
-RUN cd /usr/src \
-    && wget https://github.com/Kitware/CMake/releases/download/v3.26.4/cmake-3.26.4.tar.gz \
-    && tar zxf cmake-3.26.4.tar.gz && rm -f cmake-3.26.4.tar.gz \
-    && cd cmake-3.26.4 \
-    && ./bootstrap \
-    && gmake \
-    && make install \
-    && cd ../ && rm -rf cmake-3.26.4
+#RUN cd /usr/src \
+#    && wget https://github.com/Kitware/CMake/releases/download/v3.26.4/cmake-3.26.4.tar.gz \
+#    && tar zxf cmake-3.26.4.tar.gz && rm -f cmake-3.26.4.tar.gz \
+#    && cd cmake-3.26.4 \
+#    && ./bootstrap \
+#    && gmake \
+#    && make install \
+#    && cd ../ && rm -rf cmake-3.26.4
 
-RUN cd /usr/src/libs/libks && cmake . -DCMAKE_INSTALL_PREFIX=/usr -DWITH_LIBBACKTRACE=1 && make install
+#RUN cd /usr/src/libs/libks && cmake . -DCMAKE_INSTALL_PREFIX=/usr -DWITH_LIBBACKTRACE=1 && make install
 RUN cd /usr/src/libs/sofia-sip && ./bootstrap.sh && ./configure --prefix=/usr && make -j`nproc --all` && make install
 RUN cd /usr/src/libs/spandsp && ./bootstrap.sh && ./configure --prefix=/usr && make -j`nproc --all` && make install
 #RUN cd /usr/src/libs/signalwire-c && PKG_CONFIG_PATH=/usr/lib/pkgconfig cmake . -DCMAKE_INSTALL_PREFIX=/usr && make install
