--- a/freeswitch/centos/Dockerfile
+++ b/freeswitch/centos/Dockerfile
@@ -93,11 +93,10 @@ RUN export PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/local/lib/pkgconfig:\$PKG_CON
     && sed -i "s/^applications\/mod_signalwire/#&/g" modules.conf \
     && sed -i "s/^applications\/mod_av/#&/g" modules.conf \
     && sed -i "s/^endpoints\/mod_verto/#&/g" modules.conf \
-    && sed -i "s/^endpoints\/mod_portaudio/#&/g" modules.conf \
     && sed -i "/^#event_handlers\/mod_odbc_cdr$/s/^#//" modules.conf \
-    && sed -i "/^#endpoints\/mod_portaudio$/s/^#//" modules.conf \
+    #&& sed -i "/^#endpoints\/mod_portaudio$/s/^#//" modules.conf \
     #&& sed -i "/^#asr_tts\/mod_flite$/s/^#//" modules.conf \
-    && sed -i "/^#languages\/mod_python3$/s/^#//" modules.conf \
+    #&& sed -i "/^#languages\/mod_python3$/s/^#//" modules.conf \
     && sed -i "/^#event_handlers\/mod_cdr_pg_csv$/s/^#//" modules.conf \
     && ./configure --bindir=/usr/bin --enable-core-odbc-support \
     && make -j`nproc` && make install \
